--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -6,19 +6,19 @@
         <h3 class="modalTitle">Our development team</h3>
         <ul class="headlines-list1 list">
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Aleksandr-Pilganchuk-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Aleksandr Pilganchuk</h3>
+                <img class="personal-photo" src="./../src/images/developer-photo/Kate-Kraieva-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Kate Kraieva</h3>
                 <p class="position">Team Lead</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/ketryin" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="http://linkedin.com/in/kateryna-kraieva-561237207" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -27,19 +27,19 @@
                 </ul>
             </li>
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Ihor-Venher-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Ihor Venher</h3>
+                <img class="personal-photo" src="./../src/images/developer-photo/Anastasiia-Haltseva-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Anastasiia Haltseva</h3>
                 <p class="position">Scrum Master</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/Nastance" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://www.linkedin.com/in/anastasiia-haltseva-3898081a8" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -53,14 +53,14 @@
                 <p class="position">Developer</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/APilganchuk" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://www.linkedin.com/in/aleksandr-pilganchuk-891a7b205/" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -74,14 +74,14 @@
                 <p class="position">Developer</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/IhorWenher" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://www.linkedin.com/in/ihor-venher-646656207" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -90,19 +90,19 @@
                 </ul>
             </li>
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Aleksandr-Pilganchuk-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Aleksandr Pilganchuk</h3>
+                <img class="personal-photo" src="./../src/images/developer-photo/Lidia-Strelets-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Lidia Strelets</h3>
                 <p class="position">Developer</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/LidiaStrelets" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://www.linkedin.com/in/lidiia-strelets-848501214/" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -113,61 +113,19 @@
         </ul>
         <ul class="headlines-list2 list">
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Ihor-Venher-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Ihor Venher</h3>
-                <p class="position">Team Lead</p>
-                <ul class="social">
-                    <li>
-                        <a class="social-item" href="">
-                            <svg width="20px" height="20px">
-                                <use href="./../src/images/svg/symbol.svg#git"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="social-item" href="">
-                            <svg width="20px" height="20px">
-                                <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Aleksandr-Pilganchuk-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Aleksandr Pilganchuk</h3>
-                <p class="position">Scrum Master</p>
-                <ul class="social">
-                    <li>
-                        <a class="social-item" href="">
-                            <svg width="20px" height="20px">
-                                <use href="./../src/images/svg/symbol.svg#git"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="social-item" href="">
-                            <svg width="20px" height="20px">
-                                <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Ihor-Venher-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Ihor Venher</h3>
+                <img class="personal-photo" src="./../src/images/developer-photo/Oleg-Lunin-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Oleg Lunin</h3>
                 <p class="position">Developer</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/Oleh-N-Lunin?tab=repositories" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://www.linkedin.com/in/%D0%BE%D0%BB%D0%B5%D0%B3-%D0%BB%D1%83%D0%BD%D0%B8%D0%BD-922068194/" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -176,19 +134,19 @@
                 </ul>
             </li>
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Aleksandr-Pilganchuk-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Aleksandr Pilganchuk</h3>
+                <img class="personal-photo" src="./../src/images/developer-photo/Oleg-Nesterenko-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Oleg Nesterenko</h3>
                 <p class="position">Developer</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/NOS-DONE" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://www.linkedin.com/in/олег-нестеренко-2818a1b2" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
@@ -197,19 +155,61 @@
                 </ul>
             </li>
             <li class="personal-item">
-                <img class="personal-photo" src="./../src/images/developer-photo/Ihor-Venher-150х145.jpg" width="150" alt="фото фронтэнд разработчика">
-                <h3 class="headlines-name">Ihor Venher</h3>
+                <img class="personal-photo" src="./../src/images/developer-photo/Yurii-Dotsenko-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Yurii Dotsenko</h3>
                 <p class="position">Developer</p>
                 <ul class="social">
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="https://github.com/YuriiDotsenko" target="_blank">
                             <svg width="20px" height="20px">
                                 <use href="./../src/images/svg/symbol.svg#git"></use>
                             </svg>
                         </a>
                     </li>
                     <li>
-                        <a class="social-item" href="">
+                        <a class="social-item" href="" target="_blank">
+                            <svg width="20px" height="20px">
+                                <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="personal-item">
+                <img class="personal-photo" src="./../src/images/developer-photo/Yevhen-Yurchak-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Yevhen Yurchak</h3>
+                <p class="position">Developer</p>
+                <ul class="social">
+                    <li>
+                        <a class="social-item" href="https://github.com/MohBat6" target="_blank">
+                            <svg width="20px" height="20px">
+                                <use href="./../src/images/svg/symbol.svg#git"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-item" href="https://www.linkedin.com/in/yevhen-yurchak-12901a8b/" target="_blank">
+                            <svg width="20px" height="20px">
+                                <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="personal-item">
+                <img class="personal-photo" src="./../src/images/developer-photo/Serhii-Fedorenko-150x145.jpg" width="150" alt="фото фронтэнд разработчика">
+                <h3 class="headlines-name">Serhii Fedorenko</h3>
+                <p class="position">Developer</p>
+                <ul class="social">
+                    <li>
+                        <a class="social-item" href="https://github.com/Serhii-Fedorenko" target="_blank">
+                            <svg width="20px" height="20px">
+                                <use href="./../src/images/svg/symbol.svg#git"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-item" href="" target="_blank">
                             <svg width="20px" height="20px">
                                 <use class="social-icon" href="./../src/images/svg/symbol.svg#icon-linkedin"></use>
                             </svg>
