changes for modal window

--- a/src/partials/modul-window-card.html
+++ b/src/partials/modul-window-card.html
@@ -1,4 +1,4 @@
-<div data-modal-backdrop="" id="modal-card" class="backdrop__modal is--hidden">
+<div data-modal-backdrop id="modal-card" class="backdrop__modal is--hidden">
   <div class="modal-box">
     <button data-modal-window-close class="modal__btn">
       <span class="modal__btn_close"></span>
