--- a/src/templates/modal-card-details.hbs
+++ b/src/templates/modal-card-details.hbs
@@ -1,8 +1,8 @@
 <div class="modal-box">
-    <button class="modal__btn">
+    <button data-modal-window-close  class="modal__btn">
         <span class="modal__btn_close"></span>
     </button>
-    <form class="modal__form" action="">
+    <div class="modal__window">
         <div class="modal__circle">
             <img src="{{images.[0].url}}" alt="" />
         </div>
@@ -63,6 +63,6 @@
             </div>
         </div>
 
-        <button class="modal__btn_submit" type="submit">MORE FROM THIS AUTHOR</button>
-    </form>
+        <button class="modal__btn__more" type="submit">MORE FROM THIS AUTHOR</button>
+    </div>
 </div>
