--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -13,6 +13,7 @@ body.modal-open {
   top: 0;
   left: 0;
 
+  overflow: auto;
   width: 100%;
   height: 100%;
 
@@ -25,35 +26,35 @@ body.modal-open {
 
 .modal-box {
   @media screen and (min-width: 320px) {
+    top: 65%;
     width: 272px;
     height: 915px;
 
     border-radius: 150px 0 150px 0;
   }
   @media screen and (min-width: 595px) {
+    top: 65%;
     width: 595px;
     height: 831px;
 
     border-radius: 300px 0 300px 0;
   }
   @media screen and (min-width: 1050px) {
+    top: 65%;
     width: 942px;
     height: 1023px;
     border-radius: 300px 0 300px 0;
   }
-  overflow: auto;
-  max-height: 100%;
-  max-width: 100%;
 
   position: absolute;
-  top: 50%;
+
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms linear;
 
   background-color: rgba(255, 242, 253, 1);
 }
-.modal-box::-webkit-scrollbar {
+.backdrop__modal::-webkit-scrollbar {
   width: 0;
 }
 .modal__window {
@@ -84,9 +85,10 @@ body.modal-open {
     margin-bottom: 40px;
   }
 
+  position: relative;
+  overflow: hidden;
   margin: 0 auto;
 
-  background-color: #009688;
   border-radius: 50%;
 }
 .modal__btn {
@@ -144,7 +146,8 @@ body.modal-open {
   justify-content: space-between;
 }
 .modal__img {
-  object-fit: cover;
+  position: relative;
+  overflow: hidden;
   @media screen and (min-width: 320px) {
     display: none;
   }
@@ -157,8 +160,6 @@ body.modal-open {
     width: 360px;
     height: 640px;
   }
-
-  background-color: tomato;
 }
 .modal__info {
   width: 450px;
@@ -285,4 +286,23 @@ body.modal-open {
   color: #4c00fe;
   border-radius: 5px;
   border-color: #4c00fe;
+}
+.modal__circle img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  height: 100%;
+  width: auto;
+}
+
+.modal__img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  height: 100%;
+  width: auto;
 }
