--- a/src/templates/modal-card-details.hbs
+++ b/src/templates/modal-card-details.hbs
@@ -4,11 +4,11 @@
     </button>
     <div class="modal__window">
         <div class="modal__circle">
-            <img src="{{images.[0].url}}" alt="" />
+            <img src="{{images.[9].url}}" alt="" />
         </div>
         <div class="modal__container">
             <div class="modal__img">
-                <img class="modal-img-test" src="{{images.[8].url}}"         
+                <img class="modal-img-test" src="{{images.[9].url}}"         
                 alt="тест-картинка" 
                 width="180" 
                 height="227"/>
@@ -18,45 +18,43 @@
                     <li class="modal__item">
                         <b class="modal__title">INFO</b>
                         <p class="modal__text">
-                            Atlas Weekend is the largest music festival in Ukraine.More than 200 artists will
-                            create a proper music festival atmosphere on 10 stages
+                            {{info}}
                         </p>
                     </li>
                     <li class="modal__item">
                         <b class="modal__title">WHEN </b>
                         <ul class="modal__text">
                             <li>{{dates.start.localDate}}</li>
-                            <li>{{dates.start.localTime}} (Kyiv/Ukraine)</li>
+                            <li>{{dates.start.localTime}} ({{dates.timezone}})
+                            </li>
                         </ul>
                     </li>
                     <li class="modal__item">
                         <b class="modal__title">WHERE </b>
                         <ul class="modal__text">
-                            <li>Kyiv, Ukraine</li>
-                            <li>VDNH</li>
+                                {{#each _embedded.venues}}
+                            <li> {{city.name}}, {{country.name}} </li>
+                            <li> {{name}}</li>
+                                {{/each}}
                         </ul>
                     </li>
                     <li class="modal__item">
                         <b class="modal__title">WHO</b>
                         <ul class="modal__text">
-                            <li>The Black Eyed Peas</li>
+                            <li>{{name}}</li>
                         </ul>
                     </li>
                     <li class="modal__item">
                         <b class="modal__title">PRICES</b>
                         <ul>
+                            {{#each priceRanges}}
                             <li class="modal__text">
-                                <span class="modal__barcode">Standart 300-500 UAH</span>
+                                <span class="modal__barcode"> {{type}} {{min}} - {{max}} {{currency}}</span>
                             </li>
                             <li class="modal_buy">
                                 <button class="btn">BUY TICKETS</button>
                             </li>
-                            <li class="modal__text">
-                                <span class="modal__barcode">VIP 1000-1500 UAH</span>
-                            </li>
-                            <li class="modal_buy">
-                                <button class="btn">BUY TICKETS</button>
-                            </li>
+                            {{/each}}
                         </ul>
                     </li>
                 </ul>
