--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -24,6 +24,6 @@
         </form>
         <ul class="events-list js-list"></ul>
         <div class="spinner opacity"></div>
-        <div class="pagenumbers"></div>
+        <ul id="pagenumbers" class="pagination"></ul>
     </div>
 </section>
