--- a/src/sass/pagination/_pagination-styles.scss
+++ b/src/sass/pagination/_pagination-styles.scss
@@ -1,8 +1,10 @@
-.pagenumbers {
+.pagination {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    // width: 233px;
+    height: 33px;
     @media screen and (max-width: $to-desktop) {
         margin-top: 60px;
     }
@@ -11,7 +13,7 @@
     }
 }
 
-.pagenumbers button {
+.pagination li {
     width: 30px;
     height: 30px;
     background-color: #000;
@@ -21,208 +23,17 @@
     outline: none;
     cursor: pointer;
     padding: 5px;
-    transition: 0.3s;
+    transition: 0.1s;
 }
 
-.pagenumbers button:hover {
+.pagination li:hover {
     border: 1px solid #DC56DC;
     border-radius: 10px 0px 10px 0px;
     color: #DC56C5;
 }
 
-.pagenumbers button.active {
+.pagination li.active {
     border: 1px solid #DC56DC;
     border-radius: 10px 0px 10px 0px;
     color: #DC56C5;
-}
-
-.pagination {
-  display: inline-block;
-  padding-left: 0;
-  margin: 20px 0;
-  border-radius: 4px;
-}
-
-.pagination > li {
-  display: inline;
-}
-
-.pagination > li > a,
-.pagination > li > span {
-  position: relative;
-  float: left;
-  padding: 6px 12px;
-  margin-left: -1px;
-  line-height: 1.42857143;
-  color: #337ab7;
-  text-decoration: none;
-  background-color: #fff;
-  border: 1px solid #ddd;
-}
-
-.pagination > li > a {
-  cursor: pointer;
-}
-
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
-  margin-left: 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.pagination > li > a:hover,
-.pagination > li > span:hover,
-.pagination > li > a:focus,
-.pagination > li > span:focus {
-  z-index: 2;
-  color: #23527c;
-  background-color: #eee;
-  border-color: #ddd;
-}
-
-.pagination > .active > a,
-.pagination > .active > span,
-.pagination > .active > a:hover,
-.pagination > .active > span:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span:focus {
-  z-index: 3;
-  color: #fff;
-  cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
-}
-
-.pagination > .disabled > span,
-.pagination > .disabled > span:hover,
-.pagination > .disabled > span:focus,
-.pagination > .disabled > a,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > a:focus {
-  color: #777;
-  cursor: not-allowed;
-  background-color: #fff;
-  border-color: #ddd;
-}
-
-.pagination-lg > li > a,
-.pagination-lg > li > span {
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.3333333;
-}
-
-.pagination-lg > li:first-child > a,
-.pagination-lg > li:first-child > span {
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-
-.pagination-lg > li:last-child > a,
-.pagination-lg > li:last-child > span {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-.pagination-sm > li > a,
-.pagination-sm > li > span {
-  padding: 5px 10px;
-  font-size: 12px;
-  line-height: 1.5;
-}
-
-.pagination-sm > li:first-child > a,
-.pagination-sm > li:first-child > span {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-
-.pagination-sm > li:last-child > a,
-.pagination-sm > li:last-child > span {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-
-
-ul.pagination {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  line-height: 36px;
-  display: table;
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-  color: #428bca;
-}
-
-ul.pagination:before {
-  display: table;
-  content: ' ';
-}
-
-ul.pagination:after {
-  display: table;
-  clear: both;
-  content: ' ';
-}
-
-ul.pagination > li {
-  float: left;
-  margin: 0 2px;
-  padding: 0;
-}
-
-ul.pagination > li > a {
-  display: block;
-  margin: 0;
-  padding: 0 14px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  color: #428bca;
-  border: 1px solid #0ff;
-  border-radius: 4px;
-  background-color: #fff;
-}
-
-ul.pagination > li > a:hover {
-  border: 1px solid #08f;
-}
-
-ul.pagination > li > span {
-  display: inline;
-  padding: 7px 10px;
-  cursor: default;
-  text-align: center;
-  color: #428bca;
-}
-
-ul.pagination > li.active > a,
-ul.pagination > li.active > a:hover,
-ul.pagination > li.active > a:focus {
-  cursor: default;
-  color: #fff;
-  border: 1px solid #428bca;
-  outline: none;
-  background-color: #428bca;
-}
-
-ul.pagination > li.disabled > a,
-ul.pagination > li.disabled > a:hover,
-ul.pagination > li.disabled > a:focus {
-  cursor: not-allowed;
-  color: #999;
-  border: 1px solid #ccc;
-  outline: none;
-  background-color: #fff;
 }
