--- a/src/sass/pagination/_pagination-styles.scss
+++ b/src/sass/pagination/_pagination-styles.scss
@@ -14,6 +14,9 @@
 }
 
 .pagination li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30px;
     height: 30px;
     background-color: #000;
@@ -36,4 +39,11 @@
     border: 1px solid #DC56DC;
     border-radius: 10px 0px 10px 0px;
     color: #DC56C5;
+}
+
+.pagination li a {
+  padding-left: 5px;
+  padding-top: 12px;
+  padding-right: 5px;
+  padding-bottom: 12px;
 }
