--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -34,5 +34,6 @@
       <button>4</button>
       <button>5</button>
     </div>
+    <button class="btn-arrow-up is--hiden--btn" id="btn-arrow-up-js">&#129121</button>
   </div>
 </section>
