--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -2,6 +2,9 @@ body {
   font-family: Montserrat, sans-serif;
   background-color: #000000;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 img {
   display: block;
