--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -17,8 +17,15 @@
         <option value="">Choose country</option>
       </select>
       <label class="events__select-label" for="country-select">
-        <svg width="15" height="10" class="events__arrow-icon">
-          <use href="./../src/images/svg/gallery-sprite.svg#icon-arrow"></use>
+        <svg width="15" height="10">
+          <use
+            class="events__arrow-icon"
+            href="./../src/images/svg/gallery-sprite.svg#icon-arrow"
+          ></use>
+          <use
+            class="events__arrow-icon--up"
+            href="./../src/images/svg/gallery-sprite.svg#icon-up"
+          ></use>
         </svg>
       </label>
     </form>
