--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -28,21 +28,21 @@ body.modal-open {
   @media screen and (min-width: 320px) {
     top: 65%;
     width: 272px;
-    min-height: 915px;
+    min-height: auto;
 
     border-radius: 150px 0 150px 0;
   }
   @media screen and (min-width: 595px) {
     top: 65%;
     width: 595px;
-    min-height: 831px;
+    min-height: auto;
 
     border-radius: 300px 0 300px 0;
   }
   @media screen and (min-width: 1050px) {
     top: 65%;
     width: 942px;
-    min-height: 1023px;
+    min-height: auto;
     border-radius: 300px 0 300px 0;
   }
 
