--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -24,6 +24,10 @@ body.modal-open {
   transition: opacity 250ms linear;
 }
 
+.modal_buy--btn-link {
+  color: #ffffff;
+}
+
 .modal-box {
   @media screen and (min-width: 320px) {
     top: 65%;
