try fix location

--- a/src/templates/event-card.hbs
+++ b/src/templates/event-card.hbs
@@ -8,6 +8,6 @@
     <span class="event-image-span"></span>
     <h2 class="event-name">{{name}}</h2>
     <p class="event-date">{{dates.start.localDate}}</p>
-    <p>{{location}}</p>
+    <p class="event-location">{{place.name}}</p>
 </li>
 {{/each}}
