--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -24,36 +24,38 @@ body.modal-open {
   transition: opacity 250ms linear;
 }
 
-.modal_buy--btn-link {
-  color: #ffffff;
-}
-
 .modal-box {
+  @media screen and (max-width: 319px) {
+    width: 272px;
+    min-height: auto;
+
+    border-radius: 150px 0 150px 0;
+  }
   @media screen and (min-width: 320px) {
-    top: 65%;
     width: 272px;
     min-height: auto;
 
     border-radius: 150px 0 150px 0;
   }
   @media screen and (min-width: 595px) {
-    top: 65%;
     width: 595px;
     min-height: auto;
 
     border-radius: 300px 0 300px 0;
   }
   @media screen and (min-width: 1050px) {
-    top: 65%;
     width: 942px;
     min-height: auto;
+
+    transform: translate(-50%, -50%) scale(0.7);
+
     border-radius: 300px 0 300px 0;
   }
 
   position: absolute;
-
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(0.8);
   transition: transform 250ms linear;
 
   background-color: rgba(255, 242, 253, 1);
@@ -62,6 +64,9 @@ body.modal-open {
   width: 0;
 }
 .modal__window {
+  @media screen and (max-width: 319px) {
+    padding: 75px 12px 104px 12px;
+  }
   @media screen and (min-width: 320px) {
     padding: 75px 12px 104px 12px;
   }
@@ -73,6 +78,11 @@ body.modal-open {
   }
 }
 .modal__circle {
+  @media screen and (max-width: 319px) {
+    width: 102px;
+    height: 102px;
+    margin-bottom: 18px;
+  }
   @media screen and (min-width: 320px) {
     width: 102px;
     height: 102px;
@@ -152,6 +162,9 @@ body.modal-open {
 .modal__img {
   position: relative;
   overflow: hidden;
+  @media screen and (max-width: 319px) {
+    display: none;
+  }
   @media screen and (min-width: 320px) {
     display: none;
   }
@@ -181,6 +194,11 @@ body.modal-open {
   padding: 0;
 }
 .modal__title {
+  @media screen and (max-width: 319px) {
+    margin-bottom: 5px;
+    font-size: 20px;
+    text-align: center;
+  }
   @media screen and (min-width: 320px) {
     margin-bottom: 5px;
     font-size: 20px;
@@ -202,6 +220,14 @@ body.modal-open {
 }
 
 .modal__text {
+  @media screen and (max-width: 319px) {
+    text-align: center;
+
+    margin-bottom: 10px;
+
+    font-size: 16px;
+    line-height: 1.25;
+  }
   @media screen and (min-width: 320px) {
     text-align: center;
 
@@ -223,6 +249,9 @@ body.modal-open {
   line-height: 1.2;
 }
 .modal_buy:not(:last-child) {
+  @media screen and (max-width: 319px) {
+    margin-bottom: 20px;
+  }
   @media screen and (min-width: 320px) {
     margin-bottom: 20px;
   }
@@ -243,6 +272,10 @@ body.modal-open {
   background-image: url('../images/barcode.png');
 }
 .modal_buy .btn {
+  @media screen and (max-width: 319px) {
+    display: block;
+    margin: 0 auto;
+  }
   @media screen and (min-width: 320px) {
     display: block;
     margin: 0 auto;
@@ -260,7 +293,15 @@ body.modal-open {
   color: #ffffff;
   border-radius: 5px;
 }
+.modal_buy--btn-link {
+  color: #ffffff;
+}
 .modal__btn__more {
+  @media screen and (max-width: 319px) {
+    width: 226px;
+    height: 40px;
+    margin-top: 25px;
+  }
   @media screen and (min-width: 320px) {
     width: 230px;
     height: 40px;
