--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -25,3 +25,15 @@ a {
 h2 {
   margin: 0;
 }
+.visually-hidden {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
