--- a/src/sass/events-section/_select-styles.scss
+++ b/src/sass/events-section/_select-styles.scss
@@ -13,6 +13,9 @@
   @media screen and(min-width: $tablet) {
     width: 270px;
   }
+
+  height: 40px;
+  overflow: scroll;
 }
 .is-open .choices__inner {
   background-color: rgba(255, 255, 255);
