--- a/src/sass/pagination/_pagination-styles.scss
+++ b/src/sass/pagination/_pagination-styles.scss
@@ -42,8 +42,10 @@
 }
 
 .pagination li a {
-  padding-left: 5px;
-  padding-top: 12px;
-  padding-right: 5px;
-  padding-bottom: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    padding: 12px;
 }
