--- a/src/partials/events-section.html
+++ b/src/partials/events-section.html
@@ -1,6 +1,7 @@
 <section class="events-section">
     <div class="container events-container">
         <form class="events__search-form">
+             <button class="visually-hidden" type="submit">Send form</button>
         <input
             id="query-input"
             type="text"
