--- a/src/sass/events-section/_select-styles.scss
+++ b/src/sass/events-section/_select-styles.scss
@@ -14,8 +14,8 @@
     width: 270px;
   }
 
-  // height: 40px;
-  // overflow: scroll;
+  height: 40px;
+  overflow: scroll;
 }
 .is-open .choices__inner {
   background-color: rgba(255, 255, 255);
