--- a/src/sass/events-section/_arrow-up.scss
+++ b/src/sass/events-section/_arrow-up.scss
@@ -1,4 +1,5 @@
 .btn-arrow-up {
+  padding: 0;
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -10,7 +11,7 @@
   border-width: 4px;
   border-color: $accent-color;
   color: $accent-color;
-  font-size: 30px;
+  font-size: 40px;
 }
 
 .btn-arrow-up:hover {
