--- a/src/sass/events-section/_arrow-up.scss
+++ b/src/sass/events-section/_arrow-up.scss
@@ -3,12 +3,12 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 64px;
-  height: 64px;
+  width: 50px;
+  height: 50px;
   text-align: center;
   border-radius: 50%;
   background-color: Transparent;
-  border-width: 4px;
+  border: 4px solid $accent-color;
   border-color: $accent-color;
   color: $accent-color;
   font-size: 40px;
@@ -21,8 +21,10 @@
 .is--hiden--btn {
   display: none;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: $desktop) {
   .btn-arrow-up {
     right: 70px;
+    width: 64px;
+    height: 64px;
   }
 }
