create btn authentication

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,8 @@
 <section class="hero">
   <div class="container hero-container">
+    <button class="btn-authentication" type="button" data-modal-open-authentication>
+       Sign in | Log in
+    </button>
     <h1 class="hero-title">
       FIND BEST EVENTS <br />
       AROUND THE WORLD
