add filter function for load biggest image

--- a/src/templates/modal-card-details.hbs
+++ b/src/templates/modal-card-details.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="modal__container">
             <div class="modal__img">
-                <img class="modal-img-test" src="{{images.[9].url}}"         
+                <img class="modal-img-test" src=""         
                 alt="тест-картинка" 
                 width="180" 
                 height="227"/>
