--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -6,6 +6,109 @@
   background-size: contain;
 }
 
+body.light-theme {
+  background-color: #dcdcdc;
+}
+
+body.dark-theme {
+  background-color: #0e0e0e;
+}
+
+.toolbar {
+  position: absolute;
+  display: flex;
+  right: 100px;
+  top: 20px;
+
+  padding: 16px 24px;
+}
+
+/* THEME SWITCH */
+.theme-switch {
+  display: flex;
+  align-items: center;
+}
+
+.moon {
+  position: absolute;
+  background-color: white;
+  right: -90px;
+  z-index: 2;
+  border-radius: 50%;
+}
+
+.sun {
+  position: absolute;
+  background-color: white;
+  right: 10px;
+  z-index: 2;
+  border-radius: 50%;
+}
+
+.theme-switch__control {
+  display: flex;
+  right: -60px;
+  align-items: center;
+  flex-shrink: 0;
+  position: absolute;
+  width: 64px;
+  height: 32px;
+  border-radius: 50em;
+  padding: 3px 0;
+}
+
+.theme-switch__toggle {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  height: 0;
+  width: 0;
+  pointer-events: none;
+}
+
+.theme-switch__track {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: transparent;
+  user-select: none;
+  background-color: white;
+  border-radius: inherit;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.theme-switch__marker {
+  position: relative;
+  background-color: #dc56c5;
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  z-index: 2;
+  pointer-events: none;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  transform: translateX(3px);
+  transition: transform 250ms var(--timing-function);
+}
+
+.theme-switch__toggle:checked + .theme-switch__track {
+  background-color: #333;
+}
+
+.theme-switch__toggle:checked ~ .theme-switch__marker {
+  transform: translateX(35px);
+}
+
+.theme-switch__toggle:focus + .theme-switch__track,
+.theme-switch__toggle:active + .theme-switch__track {
+  box-shadow: 0 0 0 3px #2196f3;
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     width: 108px;
