fix images on start and seach pages

--- a/src/templates/modal-card-details.hbs
+++ b/src/templates/modal-card-details.hbs
@@ -4,7 +4,7 @@
     </button>
     <div class="modal__window">
         <div class="modal__circle">
-            <img src="{{images.[9].url}}" alt="" />
+            <img class="modal__circle-img" src="" alt="" />
         </div>
         <div class="modal__container">
             <div class="modal__img">
