--- a/src/templates/event-card.hbs
+++ b/src/templates/event-card.hbs
@@ -2,16 +2,32 @@
     <div class="for-hover">
         <img class="event-image"
          {{#each images}}
-         {{#if urla}} src="{{url}}" alt="name"
+         {{#if url}} src="{{url}}" alt="{{name}}"
          {{else}}
-         src="./images/logo.png" alt="Broken image"
+         src="https://image.flaticon.com/icons/png/512/4076/4076525.png" alt="Broken image"
          {{/if}}
          {{/each}}>
         <span class="event-image-span"></span>
-        <h2 class="event-name">{{name}}</h2>
-        <p class="event-date">{{dates.start.localDate}}</p>
+        <h2 class="event-name">
+        {{#if name}}
+        {{name}}
+        {{else}}
+    Oops! No info here :(
+        {{/if}}
+        </h2>
+        <p class="event-date">
+            {{#if dates.start.localDate}}
+            {{dates.start.localDate}}
+            {{else}}Oops! No info here :(
+        {{/if}}    
+        </p>
         {{#each _embedded.venues}}
-        <p class="event-location">{{name}}</p>
+        <p class="event-location">
+            {{#if name}}
+            {{name}}
+            {{else}} Oops! No info here :(
+            {{/if}}
+            </p>
         {{/each}}
     </div>
 </li>
