--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,13 @@
 <section class="hero">
-  <div class="container hero-container">
-    <button class="btn-authentication" type="button" data-modal-open-authentication>
-       Sign in | Log in
-    </button>
-    <h1 class="hero-title">
-      FIND BEST EVENTS <br />
-      AROUND THE WORLD
-    </h1>
+  <div class='help-container'>
+    <div class="container hero-container">
+      <h1 class="hero-title">
+        FIND BEST EVENTS <br />
+        AROUND THE WORLD
+      </h1>
+      <button class="btn-authentication" type="button" data-modal-open-authentication>
+        Sign UP | Log in
+      </button>
+    </div>
   </div>
 </section>
