--- a/src/sass/footer/_footer.scss
+++ b/src/sass/footer/_footer.scss
@@ -12,7 +12,7 @@
   color: #939393;
   border-style: none;
   margin: 0;
-  background-color: black;
+  background-color: Transparent;
   cursor: pointer;
 }
 .footer-heart {
