--- a/src/sass/pagination/_pagination-styles.scss
+++ b/src/sass/pagination/_pagination-styles.scss
@@ -26,7 +26,7 @@
     outline: none;
     cursor: pointer;
     padding: 5px;
-    transition: 0.1s;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pagination li a:hover {
