--- a/src/partials/modul-window-our-team.html
+++ b/src/partials/modul-window-our-team.html
@@ -3,7 +3,7 @@
     <button data-modal-close class="modal__btn">
       <span class="modal__btn_close"></span>
     </button>
-    <h3 class="modalTitle">Our development team</h3>
+    <h3 class="modalTitle">OUR DEVELOPMENT TEAM</h3>
     <ul class="headlines-list1 list">
       <li class="personal-item">
         <img
@@ -239,8 +239,7 @@
             </a>
           </li>
           <li>
-            <a
-              class="social-item"
+            <a class="social-item"
               href="https://www.linkedin.com/in/yurii-dotsenko-42330a215/"
               target="_blank"
             >
