--- a/src/sass/modul-window-our-team/_modul-window-our-team.scss
+++ b/src/sass/modul-window-our-team/_modul-window-our-team.scss
@@ -51,9 +51,9 @@
     margin-top: 10px;
     margin-bottom: 20px;
     color: #DC56C5;
-    text-shadow: 2px 2px 4px #000000;
+    // text-shadow: 2px 2px 4px #000000;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 24px;
     line-height: 1.19;
     text-align: center;
 }
